Notes for 0.929 release:

Improved documentation in several places.

Created example ex_mcmc_kde.cpp.

Created new steppers for mcmc_para.

Updated docker files for Ubuntu 24.04.

Improved Python, multiprecision, MPFR support in several classes. 

Updated classes and methods inte_kronrod_boost, cli::xml_to_o2(),
eos_leptons, eos_leptons_multip, inte_double_exp_boost, ode_boost,
fermion_deriv_rel, inte_gauss_cern, inte_adapt_cern, astep_boost,
boson_rel, calc_utf8, funct_multip, eos_sn, lib_settings,
fermi_function, and boson_thermo.

Allowed for virtual environments in py_init()

Updates to acol commands: table rename, table3d refine, table cat,
table3d contours, table autocorr, table thin-mcmc. Updated acol
function support. 

Updated yanic.

Created a new O2SCL_NO_BOOST_MULTIPRECISION ifdef for speed. 

------------------------------------------------------------------------
Notes for 0.928 release:

Several improvements to documentation and examples.

Reworked interp_krige, interp_krige_optim, interpm_krige and
interpm_krige_optim.

Fixed ioctl calls and removed default ncurses requirement. 

Improved multiprecision support in the integrators and created
funct_multip_transform. Created a getfp, setfp, sets_vec_vec, and
setd_vec_vec functions for hdf_file.

Updated mcmc_para, eos_tov_interp, polylog, and eos_sn_hfsl classes.

Removed old acolm_o2graph functions. 

Updated fermion_rel class, continuing work on multiprecision support.

Updated python interface for several classes. 

Created new classes vec_prob_dens_mdim, vec_prob_cond_mdim,
prob_dens_func_gmm,

Created new classes gmm_python, kde_python, interpm_python and reworked
python support.

Created new FFT functions, rng_set_seed(), rng_set_seed_mpi(),
screenify_trans(), backslashify(), 

Created new example ex_tensor.

Created acol command to-hist for table3d objects, interp-table3d for
table objects, to-gmm for table objects, refine for table3d and