@@ -48,7 +48,7 @@ PROJECT_NAME           = "Object-oriented Scientific Computing Library"
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-PROJECT_NUMBER         = "Version 0.930a6"
+PROJECT_NUMBER         = "Version 0.930"
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
