@@ -72,9 +72,9 @@ author = 'Andrew W. Steiner'
 # built documents.
 #
 # The short X.Y version.
-version = '0.930a6'
+version = '0.930'
 # The full version, including alpha/beta/rc tags.
-release = '0.930a6'
+release = '0.930'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
