@@ -1,7 +1,7 @@
 .. _o2scl:
 
-Object-oriented Scientific Computing Library: v0.930a6
-======================================================
+Object-oriented Scientific Computing Library: v0.930
+====================================================
 
 O₂scl is a C++ library for object-oriented scientific computing which
 has been in active development for 20 years. This is a beta version.
