@@ -26,8 +26,8 @@ WORKDIR /opt
 
 RUN pip3 install --break-system-packages numpy==2.0.2
 RUN pip3 install --break-system-packages h5py==3.12.1
-COPY v0.930a6_ot_req.txt ./
-RUN pip3 install --no-cache-dir --break-system-packages -r v0.930a6_ot_req.txt
+COPY v0.930_ot_req.txt ./
+RUN pip3 install --no-cache-dir --break-system-packages -r v0.930_ot_req.txt
 RUN pip3 install --break-system-packages --no-deps normflows==1.7.3 \
   pipdeptree==2.24.0
 RUN pip3 install --break-system-packages torch==2.5.1 \
@@ -39,6 +39,7 @@ RUN pip3 install --break-system-packages torch==2.5.1 \
 
 RUN git clone https://github.com/awsteiner/o2sclpy
 WORKDIR /opt/o2sclpy
+RUN git fetch && git pull && git checkout 9de0c6bdf178
 RUN pip3 install --break-system-packages --editable . 
 
 # Now install o2scl
