@@ -1,3 +1,6 @@
+Notes for 0.930 release:
+
+------------------------------------------------------------------------
 Notes for 0.929 release:
 
 Improved documentation in several places.
